Alteracao no index.html

--- a/Front/index.html
+++ b/Front/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifólio</title>
+    <title>Portfólio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -20,7 +20,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#education">Educação</a>
         <a href="#services">Projetos</a>
-        <a href="#testimonials">Depoimentos</a>
+        <a href="#testimonials">Hobbies</a>
         <a href="#contact">Contato</a>
       </nav>
     </header>
@@ -30,7 +30,8 @@
         <h1>Olá! Me chamo <span>Carlos</span></h1>
         <h3 class="text-animation">Estudante: <span> </span></h3>
         <p>
-          Atualmente estou no último semestre do tecnólogo em Análise e Desenvolvimento de Sistemas, pelo Senai Lauro de Freitas e 2° semestre bacharelado Engenharia de Software pela Universidade Católica de Salvador. Possuo Forte conhecimento em desenvolvimento Backend, me especializando em Java, Spring Framework e Mysql. Além disso, possuo experiência com Python, Javascript, Html e Css. Sou proficiente em Git, Github e outras ferramentas como Postman. 
+          Atualmente, estou no último semestre do curso de Tecnólogo em Análise e Desenvolvimento de Sistemas pelo
+           Senai Lauro de Freitas e no segundo semestre do Bacharelado em Engenharia de Software pela Universidade Católica de Salvador. Sólida experiência em desenvolvimento Back-End, me especializando em Java, Spring Framework e MySQL. Além disso, possuo conhecimento em Python, JavaScript, React, HTML e CSS. Sou proficiente em ferramentas de controle de versão como Git e GitHub, além de ter experiência com Postman para testes de API e outras tecnologias relevantes. 
         </p>
 
         <div class="social-icons">
@@ -60,8 +61,7 @@
           <div class="timeline-content">
             <h3>Senai Lauro de Freitas</h3>
             <p>
-              Em 2023 me matriculei para o curso técnico de Análise e Desenvolvimento de sistemas no Senai de Lauro de Freitas. Curso com previsão para fim de 2024, focado em desenvolver de fato sistemas, desde a sua modelagem, até o produto final.
-              Aprendizado por ordem cronológica: C, Java, Mysql, Html e Css, JavaScript, React, node.js 
+              Em 2023, iniciei o curso Técnico de Análise e Desenvolvimento de Sistemas no Senai Lauro de Freitas, com conclusão prevista para 2024. O curso proporcionou uma formação abrangente no desenvolvimento de sistemas, abordando desde a modelagem até a implementação do produto final. As tecnologias estudadas incluem C, Java, MySQL, HTML, CSS, JavaScript, React e Node.js.
             </p>
           </div>
         </div>
@@ -83,10 +83,9 @@
           <div class="timeline-dot"></div>
           <div class="timeline-date">2024</div>
           <div class="timeline-content">
-            <h3>Premium Entretenimento</h3>
+            <h3>Premium Entretenimento (2024)</h3>
             <p>
-              Trabalho temporário de carnaval onde desempenhei cargo de atendente. Atendi mais de 200 clientes durante o período do evento, resolvendo problemas e respondendo perguntas com uma taxa de satisfação alta.
-              Pude desenvolver habilidades interpessoais como a comunicação, resolução de problemas e proatividade, essenciais na área de desenvolvimento de software ao lidar com equipes.
+              Trabalho temporário de carnaval onde desempenhei cargo de atendente. Atendi mais de 200 clientes durante o período do evento, resolvendo problemas e respondendo perguntas com uma taxa de satisfação alta. Pude desenvolver habilidades interpessoais como a comunicação, resolução de problemas e proatividade, essenciais na área de desenvolvimento de software ao lidar com equipes.
             </p>
           </div>
         </div>
@@ -95,10 +94,9 @@
           <div class="timeline-dot"></div>
           <div class="timeline-date">2024</div>
           <div class="timeline-content">
-            <h3>DablioWeb Soluções Digitais LTDA</h3>
+            <h3>DablioWeb Soluções Digitais LTDA (2024)</h3>
             <p>
-              Estágio na área de contingência de software. Criei mais de 50 contas de desenvolvedor Google, garantindo conformidade com as políticas de privacidade.
-              Configurei, criei e publiquei aplicativos mobile na Play Store, aumentando a visibilidade e alcance dos clientes.
+              Estágio na área de contingência de software. Criei mais de 50 contas de desenvolvedor Google, garantindo conformidade com as políticas de privacidade. Configurei, criei e publiquei aplicativos mobile na Play Store, aumentando a visibilidade e alcance dos clientes.
               
             </p>
           </div>
@@ -114,8 +112,7 @@
           <div class="services-info">
             <h4>SmartHome</h4>
             <p>
-              Eu e minha equipe, desenvolvemos um projeto que permite aos usuários controlar remotamente até 4 lâmpadas, utilizando seu smartphone. Uma simulçao de "Casa inteligente" que você controla o estado da luz com o seu celular.
-              Utilizamos tecnologias como React, Nodejs, MQTT e banco de dados para proporcionar uma experiência de controle intuitiva e conveniente. Projeto fruto de uma proposta de atividade do Senai.
+              Em equipe, desenvolvemos uma solução de automação residencial, permitindo que os usuários controlem remotamente até 4 lâmpadas através de seus smartphones. Utilizamos React, Node.js, MQTT e bancos de dados para criar uma experiência intuitiva e de fácil controle, simulando um ambiente de "Casa Inteligente". Esse projeto foi uma excelente oportunidade de aplicar conceitos de IoT e integração de sistemas.
               <a href="https://www.linkedin.com/posts/carlosrios04_smarthome-finalmente-eu-e-minha-equipe-activity-7209579518297100290-LIkj?utm_source=share&utm_medium=member_desktop">Link do projeto</a>
             </p>
           </div>
@@ -123,20 +120,20 @@
 
         <div class="services-box">
           <div class="services-info">
-            <h4>Gestão Clientes</h4>
+            <h4>SchoolPayroll</h4>
             <p>
-              Projeto pessoal a fins de estudos, para reforcar meu conhecimento em Java e banco de dados. Conta com o gerenciamento de registros de clientes usando SQLITE, login autenticado, botão de gerar relatório, gerar backup, restaurar backup e CRUD de clientes.
-              <a href="https://github.com/CarlosSoft04/Gestao_Clientes">Link do projeto</a>
+              Sistema de folha de pagamento para gerenciar professores de uma escola. A aplicação utiliza um banco de dados em memória (H2), acessado via JPA, e é exposta por meio de uma camada Spring MVC + Spring HATEOAS para acesso pela web
+              <a href="https://github.com/CarlosSoft04/SchoolPayroll">Link do projeto</a>
             </p>
           </div>
         </div>
 
         <div class="services-box">
           <div class="services-info">
-            <h4>Lista de tarefas</h4>
+            <h4>ColorGuess</h4>
             <p>
-              Projeto pessoal a fins de estudos para reforçar meu conhecimento em JavaScript, Html e Css. Lista de tarefas para o usuario se organizar melhor no dia a dia, listando responsabilidades que deve fazer no dia. Não mexi com banco de dados neste projeto
-              <a href="https://github.com/CarlosSoft04/ListaTarefas">Link para o projeto</a>
+              Color Guess é um jogo interativo e divertido onde os jogadores precisam adivinhar o código hexadecimal da cor exibida na tela. O jogo testa suas habilidades de percepção de cores e oferece uma experiência simples, mas desafiadora. Quanto mais você acerta, mais difícil o jogo fica!
+              <a href="https://github.com/CarlosSoft04/ColorGuess">Link para o projeto</a>
             </p>
           </div>
         </div>
@@ -156,11 +153,11 @@
 
     <section class="testimonials" id="testimonials">
       <div class="testimonials-box">
-        <h2 class="heading">Depoimentos...</h2>
+        <h2 class="heading">Hobbies</h2>
         <div class="wrapper">
           <div class="testimonial-item">
-            <img src="image.jpeg" alt="" />
-            <h2>Carlos</h2>
+            <img src="./WhatsApp Image 2024-11-08 at 21.54.57.jpeg" alt="" />
+            <h2>JiuJitsu</h2>
             <div class="rating">
               <i class="bx bxs-star" id="star"></i>
               <i class="bx bxs-star" id="star"></i>
@@ -169,16 +166,13 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Accusantium, blanditiis. Expedita minima qui, laborum neque
-              laudantium eveniet doloremque sit! Neque ipsum, sapiente quia
-              alias repellat cupiditate dolore iure unde dicta."
+              Sou faixa azul e minha paixão além da tecnologia está nos tatames. Frequento todos os dias os treinos e vejo meus companheiros como uma segunda familia. Conaidero muito importante ter uma rotina saudável de treinos, onde posso esvaziar a mente e realizar um bom trabalho profissional
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img src="image.jpeg" alt="" />
-            <h2>Rios</h2>
+            <img src="pexels-pixabay-159866.jpg" alt="" />
+            <h2>Ler</h2>
             <div class="rating">
               <i class="bx bxs-star" id="star"></i>
               <i class="bx bxs-star" id="star"></i>
@@ -187,15 +181,12 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Accusantium, blanditiis. Expedita minima qui, laborum neque
-              laudantium eveniet doloremque sit! Neque ipsum, sapiente quia
-              alias repellat cupiditate dolore iure unde dicta."
+              Comunicação eficaz e clara, vocabulário amplo e criatividade, são algumas características que desenvolvi com a simples arte de ler. Leio livros desde os meus 8 anos e hoj funciona não só como um passa tempo pra mim, mas como uma oportunidade de ser melhor que 99% das pessoas
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img src="image.jpeg" alt="" />
+            <img src="./WhatsApp Image 2024-11-08 at 21.57.05.jpeg" alt="" />
             <h2>Goncalves</h2>
             <div class="rating">
               <i class="bx bxs-star" id="star"></i>
@@ -205,10 +196,7 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Accusantium, blanditiis. Expedita minima qui, laborum neque
-              laudantium eveniet doloremque sit! Neque ipsum, sapiente quia
-              alias repellat cupiditate dolore iure unde dicta."
+              Viajar e estar conectado com a natureza renova as minhas energias e me deixa mais próximo comigo mesmo. Paisagens verdes e lugares como fazenda, florestas, praias são os lugares que eu procuro ir.
             </p>
           </div>
         </div>
@@ -268,7 +256,7 @@
         </li>
 
         <li>
-          <a href="#">Depoimentos</a>
+          <a href="#">Hobbies</a>
         </li>
       </ul>
 
